# atoc4815_git

./: Lab_06_Russell_Pipkin.ipynb  Lab_08_Russell_Pipkin.ipynb  README.md  boulder_temperatures.py
lorenz-ens/: License  README.md  pyproject.toml  run.py
lorenz-ens/lorenz-ens.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lorenz-ens/lorenz_ens.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lorenz-ens/lorenz_project/: __init__.py  integrators.py  lorenz63.py  plotting.py  run_lorenz_ensemble.py
